examples/bad/ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION/unexpected_iszero.st
language core;


fn main(n : Nat) -> Nat {
    return Nat::iszero(0)
}//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
\n\n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
/n/n//ERROR_UNEXPECTED_TYPE_FOR_EXPRESSION
